# nged-substation-forecast

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pymarkdown-docstrings.json  1  404.html  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  TODO.md  architecture_implementation_plan.md  check_actuals.py  check_data_ranges.py  check_ecmwf_lon.py  check_h3_type.py  check_h3_value.py  check_math.py  check_metadata.py  check_metadata_h3.py  check_metadata_latlng.py  check_midnight_zeros.py  check_midnight_zeros_v2.py  check_train_nwps.py  ckan_api_tinkering.py  comments_for_opencode.md  conductor_plan.md  conftest.py  cross-validation-plan.md  dagster-download-substation-locations.md  dagster.yaml  dg.toml  diff.txt  index.html  main.py  manual_tweaks.md  manual_tweaks_2.md  (+59 more)
.claude/: launch.json
.github/workflows/: ci.yml  docs.yml  nightly_network_tests.yml
.hive/: issues.jsonl
.opencode/commands/: ADR.md
api/: index.html
api/contracts/: index.html
api/delta_store/: index.html
api/dynamical_data/: index.html
api/geo/: index.html
api/ml_core/: index.html
api/nged_data/: index.html
api/xgboost_forecaster/: index.html
architecture/aws-costs/: index.html
architecture/code-style/: index.html
architecture/ecmwf-ens-known-issues/: index.html
architecture/forecast-delivery/: index.html
architecture/ml-orchestration/: index.html
architecture/overview/: index.html
architecture/philosophy/: index.html
architecture/production-deployment/: index.html
architecture/testing/: index.html
architecture/why-dagster-not-airflow/: index.html
architecture_decision_records/001-strictly-typed-configuration/: index.html
architecture_decision_records/002-universal-ml-interface/: index.html
architecture_decision_records/003-multi-nwp-support/: index.html
architecture_decision_records/004-pure-polars-ml-pipeline/: index.html
architecture_decision_records/005-zero-magic-ml-pipeline/: index.html
architecture_decision_records/006-dependency-isolation-for-data-contracts/: index.html
architecture_decision_records/007-explicit-dagster-model-instantiation/: index.html
architecture_decision_records/008-delegate-spatial-filtering-to-inner-models/: index.html
architecture_decision_records/009-unified-ml-model-interface/: index.html
architecture_decision_records/010-geospatial-package-separation/: index.html
architecture_decision_records/011-dagster-dependencies-in-subpackages/: index.html
architecture_decision_records/012-cartesian-wind-interpolation/: index.html
architecture_decision_records/013-longitude-wrap-around-and-anti-meridian-handling/: index.html
architecture_decision_records/014-centralized-data-preparation/: index.html
architecture_decision_records/015-strategy-pattern-for-csv-parsing/: index.html
architecture_decision_records/016-universal-model-architecture/: index.html
architecture_decision_records/017-full-pipeline-integration-testing/: index.html
architecture_decision_records/018-modernize-pipeline-dependencies-and-testing/: index.html
architecture_decision_records/019-custom-composite-io-manager/: index.html
architecture_decision_records/template/: index.html
background/data-quality/: index.html
background/network/: index.html
background/nged-incumbent-forecast/: index.html
background/requirements/: index.html
background/switching-events/: index.html
conf/: config.yaml
conf/cv/: default.yaml
conf/model/: xgboost.yaml  xgboost_baseline.yaml
data/exports/: README.md
deployments/local/: pyproject.toml
docs/: documentation-guide.md  getting-started.md  index.md  roadmap.md
docs/api/: index.md
docs/architecture/: airflow-portability.md  aws-costs.md  code-style.md  differentiable-physics.md  ecmwf-ens-known-issues.md  forecast-delivery.md  ml-orchestration.md  overview.md  philosophy.md  (+4 more)
documentation-guide/: index.html
exploration_scripts/: test_leakage.py
getting-started/: index.html
live_service/: index.html
metadata/: README.md  nwp_metadata.csv  scaling_params_for_ecmwf_ens_0_25_degree.csv
ml_experimentation/: index.html
plans/: 00_review_findings.md  01_ci.md  02_baseline_forecasters.md  02_live_forecasts.md  03_production_model_artifacts.md  04_aws_deployment.md  04_reproducibility_stamping.md  05_production_model_artifacts.md  05_production_monitoring.md  06_baseline_forecasters.md  06_nwp_clip_logging.md  07_probabilistic_evaluation.md  09_live_forecasts.md  09_xgboost_quick_wins.md  10_nwp_clip_logging.md  10_production_monitoring.md  11_leaderboard_fold_hygiene.md  11_rigor_tests_and_cleanup.md  12_drop_hydra.md  12_xgboost_quick_wins.md  13_aws_deployment.md  13_rigor_tests_and_cleanup.md  README.md  dagster_plan.md  live-forecast-on-laptop.md  nwp-int16-to-float32-migration.md  nwp-significand-rounding-experiment.md  restructure_planning_docs.md
roadmap/: index.html
scripts/: build_and_verify_image.sh  clean_json_nan.py  export_forecasts_for_alex.py  lint_docstring_markdown.py  migrate_delta_table.py  push_and_deploy_image.sh  run_baseline_experiment.py
search/: search_index.json
techniques/: index.html
tests/: __init__.py  _nwp_test_data.py  conftest.py  manual_xgboost_integration.py  repro_plot.html  test_assets.py  test_checks.py  test_config_resource.py  test_config_robustness.py  test_cv_assets.py  test_cv_power_forecasts.py  test_data_cleaning_robustness.py  test_dates.py  test_health.py  test_hydra_integration.py  test_jobs.py  test_live_forecasts.py  test_longitude_sorting.py  test_metrics.py  test_nged_assets.py  test_nwp.py  test_nwp_descaling.py  test_nwp_ingestion_robustness.py  test_placeholder.py  test_plot_no_overlap.html  test_plot_power_forecast.py  test_plotting_robustness.py  test_power_forecast_storage.py  test_power_time_series_rename.py  test_production_model.py  test_promoted_model.py  test_register_experiment_job.py  test_reproduce_dimension_order_bug.py  test_s3_data_paths.py  test_sentry.py  test_settings.py  test_tmp_malformed.py  test_tmp_validation.py  test_trained_cv_model.py  test_xgb_cv.py  (+6 more)
(+321 files in other folders)
