# --- PROJECT CONFIGURATION --- #

# Metadata (see https://peps.python.org/pep-0621/)
[project]
name = "nged-substation-forecast"
version = "0.0.1"
description = "Forecast net demand at primary, BSP, and GSP substations, and split the forecast into gross demand, solar, and wind per substation for National Grid Electricity Distribution (NGED)"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.14"
license = {text = "MIT License"}
authors = [
    { name = "Open Climate Fix Team", email = "info@openclimatefix.org"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "altair>=6.0.0",
    "contracts",
    "dagster>=1.12.11",
    "dagster-webserver>=1.12.11",
    "delta_store",
    "deltalake",
    "dynamical_data",
    "geo",
    "hydra-core",
    "ml_core",
    "mlflow-skinny",
    "nged_data",
    "obstore",
    "patito",
    "plotting",
    "polars>=1.0.0",
    "pyarrow",
    "requests>=2.31.0",
    "xgboost_forecaster",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "numpy>=1.24",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.16",
    "unittest-xml-reporting>=4.0.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-include-markdown-plugin>=7.2.2",
    "pymarkdownlnt>=0.9.13",
    "mlflow>=3.14.0",
]

[project.urls]
repository = "https://github.com/openclimatefix/nged-substation-forecast"

# --- UV WORKSPACE CONFIG ---
# See: https://docs.astral.sh/uv/concepts/projects/workspaces

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
nged_data = { workspace = true }
contracts = { workspace = true }
delta_store = { workspace = true }
ml_core = { workspace = true }
plotting = { workspace = true }
xgboost_forecaster = { workspace = true }
dynamical_data = { workspace = true }
geo = { workspace = true }

# --- DAGSTER ---

[tool.dagster]
module_name = "nged_substation_forecast.definitions"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "nged_substation_forecast"
registry_modules = [
    "nged_substation_forecast.components.*",
]

# --- LINTING AND TYPING CONFIGURATION --- #

# Ruff configuration
# See https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:codecs.open\\(\\) is deprecated:DeprecationWarning:mlflow.*",
]
norecursedirs = [".venv", "venv", ".git", "__pycache__"]
markers = [
    "integration: tests that exercise real wiring (Dagster + file-based MLflow + temp Delta)",
]

[tool.pymarkdown]
# Line length: prose isn't hard-wrapped in this repo's docs, and ruff's default lint
# selection doesn't enforce E501 either, so there's no existing precedent to match.
plugins.md013.enabled = false
# Duplicate heading: only flag duplicates under the same parent heading, not across
# the whole file (e.g. "Usage" appearing under two different top-level sections).
plugins.md024.siblings_only = true
