# --- PROJECT CONFIGURATION --- #

# Metadata (see https://peps.python.org/pep-0621/)
[project]
name = "nged-substation-forecast"
version = "0.1.0"
description = "Forecast net demand at primary, BSP, and GSP substations, and split the forecast into gross demand, solar, and wind per substation for National Grid Electricity Distribution (NGED)"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.14"
license = {text = "MIT License"}
authors = [
    { name = "Open Climate Fix Team", email = "info@openclimatefix.org"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "altair>=6.0.0",
    "contracts",
    "dagster>=1.12.11",
    "dagster-aws>=0.28.11",
    "dagster-postgres>=0.28.11",
    "dagster-webserver>=1.12.11",
    "delta_store",
    "deltalake",
    "dynamical_data",
    "geo",
    "hydra-core",
    "ml_core",
    "mlflow-skinny",
    "nged_data",
    "obstore",
    "patito",
    "plotting",
    "polars>=1.0.0",
    "pyarrow",
    "requests>=2.31.0",
    "xgboost_forecaster",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "numpy>=1.24",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.16",
    "unittest-xml-reporting>=4.0.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-include-markdown-plugin>=7.2.2",
    "pymarkdownlnt>=0.9.13",
    "mlflow>=3.14.0",
    "moto[server]>=5.0.0",
]

[project.urls]
repository = "https://github.com/openclimatefix/nged-substation-forecast"

# --- UV WORKSPACE CONFIG ---
# See: https://docs.astral.sh/uv/concepts/projects/workspaces

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
nged_data = { workspace = true }
contracts = { workspace = true }
delta_store = { workspace = true }
ml_core = { workspace = true }
plotting = { workspace = true }
xgboost_forecaster = { workspace = true }
dynamical_data = { workspace = true }
geo = { workspace = true }

# --- DAGSTER ---

[tool.dagster]
module_name = "nged_substation_forecast.definitions"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "nged_substation_forecast"
registry_modules = [
    "nged_substation_forecast.components.*",
]

# --- LINTING AND TYPING CONFIGURATION --- #

# Ruff configuration
# See https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100

[tool.pytest.ini_options]
# importlib mode lets test modules in different directories share a basename (e.g.
# tests/test_metrics.py and packages/ml_core/tests/test_metrics.py); the default prepend
# mode aborts collection with an "import file mismatch" error on the duplicate name.
addopts = "--import-mode=importlib"
filterwarnings = [
    "ignore:codecs.open\\(\\) is deprecated:DeprecationWarning:mlflow.*",
]
norecursedirs = [".venv", "venv", ".git", "__pycache__"]
markers = [
    "integration: tests that exercise real wiring (Dagster + file-based MLflow + temp Delta)",
]

[tool.pymarkdown]
# Line length: prose isn't hard-wrapped in this repo's docs, and ruff's default lint
# selection doesn't enforce E501 either, so there's no existing precedent to match.
plugins.md013.enabled = false
# Duplicate heading: only flag duplicates under the same parent heading, not across
# the whole file (e.g. "Usage" appearing under two different top-level sections).
plugins.md024.siblings_only = true
# Nested list indent: MkDocs' renderer (Python-Markdown, no sane-lists extension) only treats a
# sub-list as nested when it's indented a full 4 spaces; 2-space indent (a bare list's default)
# silently renders as a flat, unnested list instead. Match the renderer, not the default.
#
# Use PML101 ("anchored list indentation"), not the more common MD007 ("ul-indent"), to enforce
# this: MD007 hard-codes bullets nested under an *ordered* item to align with the parent's
# content column (3 spaces for a "1. " marker) and ignores its own `indent` setting for that
# case — but Python-Markdown still needs a full 4 spaces to nest there, so MD007's own preferred
# indent renders flat. It also never checks a numbered sublist's indentation at all. PML101
# anchors every level at (depth − 1) × indent regardless of parent marker width, which is exactly
# Python-Markdown's model, so it accepts 4-space nesting under both bullet and numbered parents
# with no pragmas — and catches under-indented numbered sublists that MD007 misses entirely.
plugins.md007.enabled = false
plugins.pml101.enabled = true
plugins.pml101.indent = 4
# Front matter: Claude Code skills (.claude/skills/*/SKILL.md) require a YAML frontmatter block.
# Without this, pymarkdown misreads the frontmatter as document content (e.g. "---" as a setext
# heading underline), producing spurious heading-style/blank-line errors.
extensions.front-matter.enabled = true
